fixing name overlapping on side menu

--- a/app/assets/stylesheets/_navigation.css.scss
+++ b/app/assets/stylesheets/_navigation.css.scss
@@ -130,7 +130,7 @@ body > nav + article {
       border-top: 1px dashed $black;
 
       &:first-child {
-        margin-top: 80px;
+        margin-top: 90px;
       }
 
       a {
